Limpieza de codigo y separacion de diccionarios

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,5 +99,5 @@
     "streambuf": "cpp",
     "typeinfo": "cpp"
   },
-  "todo-tree.tree.scanMode": "workspace only"
+  "todo-tree.tree.scanMode": "workspace"
 }
